@@ -9,6 +9,8 @@
 	* superoperators module (experimental)
 	* HilbertArray.trace_norm()
 	* HilbertArray.schatten_norm()
+	* circuits.controlled_U
+	* circuits.toffoli
 
 === qitensor-0.10 (Dan Stahlke, 2012-10-27) ===
 	* can run doctests via 'setup.py test'
